<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MadLibs</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="et_relative_hint">Relative</string>
    <string name="et_adjective_hint">Adjective</string>
    <string name="et_name_room_hint">Name of person in room</string>
    <string name="et_verb_ed_hint">Verb ending in \"ed\"</string>
    <string name="et_body_hint">Body part</string>
    <string name="et_verb_ing_hint">Verb ending in \"ing\"</string>
    <string name="et_name_hint">Name</string>
    <string name="button_showme_text">Show me!</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
